--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: MBA  
+  uni: BU
+  year: June, 2000 &mdash; January, 2015
   # awards:
-  # summary:
+  summary: Really expirenced!
